# voile-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
configs/: system.default.toml  user.default.toml  voile.default.toml
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: books.js  config.js  users.js
frontend/src/components/: AddBookPage.vue  BookEdit.vue  BookPage.vue  BooksManage.vue  BooksPage.vue  ConfigPage.vue  ContentPage.vue  HomePage.vue
frontend/src/views/: EpubReader.vue  Layout.vue  LoginPage.vue  MixtureReader.vue  PDFReader.vue
src/: main.rs  user.rs  voile.rs
src/appstate/: appstate.rs  mod.rs
src/config/: config.rs  mod.rs  system_config.rs  user_config.rs
src/routes/: book.rs  config.rs  default_frontend.rs  mod.rs  user.rs  userdefine_frontend.rs  util.rs
src/user/: user.rs
src/voile/: config.rs  errors.rs  mod.rs  util.rs  voile.rs
