[package]
name = "voile-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlite = "0.30"
askama = "0.11"
cached = "0.40"
env_logger = "0.9"
log = "0.4"
toml = "0.5"
home = "0.5"

[lib]
name = "voile"
path = "src/voile.rs"

[[bin]]
name = "app"
path = "src/main.rs"
