[package]
name = "voile-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlite = "0.30"
askama = "0.11"
cached = "0.40"
env_logger = "0.9"
log = "0.4"
toml = "0.5"
home = "0.5"
actix-multipart = "0.5.0"
futures-util = "0.3.26"
rust-embed="6.6.1"
mime_guess = { version = "2" }
zip = "0.6"
tempfile = "3"
dirs = "5.0"
toml_edit = "0.19"
path-absolutize = "3.1"

[[bin]]
name = "app"
path = "src/main.rs"
